# AURIXA

./: .commitlintrc.json  .env.example  .gitignore  .markdownlint.json  README.md  package.json  performance_report.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
.github/workflows/: codeql-analysis.yml  docker-build-push.yml  docker-build.yml  lint-security.yml  tests.yml
apps/agent-runtime/: Dockerfile  pyproject.toml
apps/api-gateway/: Dockerfile  package.json  vitest.config.ts
apps/execution-engine/: Dockerfile  pyproject.toml
apps/execution-engine/src/execution_engine/: config.py  main.py  models.py
apps/llm-router/: Dockerfile  pyproject.toml
apps/observability-core/: Dockerfile  pyproject.toml
apps/orchestration-engine/: Dockerfile  pyproject.toml
apps/rag-service/: Dockerfile  pyproject.toml
apps/safety-guardrails/: Dockerfile  pyproject.toml
apps/streaming-voice/: Dockerfile  pyproject.toml
apps/streaming-voice/scripts/: download-vosk-model.sh
apps/streaming-voice/src/streaming_voice/: config.py  main.py  stt.py  tts.py
docs/: ARCHITECTURE_AUDIT.md  END_USER_FLOW_AND_TELEPHONY.md  FEATURE_GAP_ANALYSIS.md  OPTIMIZATION_AUDIT.md  STREAMING_AND_END_USER_FLOWS.md  TECHNICAL_DOCUMENTATION.md
frontend/admin-console/: next.config.ts  package.json  tailwind.config.ts
frontend/dashboard/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
frontend/hospital-portal/: Dockerfile  next.config.ts  (+2 more)
scripts/: bootstrap-python.sh  docker-up.sh  e2e-check.sh  e2e-detailed.sh  kill-stack.sh  run-stack.sh  verify-stack.sh
(+100 files in other folders)
