[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aurixa-streaming-voice"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "loguru>=0.7.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "numpy>=2.0.0",
    "pydub>=0.25.0",
    "faster-whisper>=1.0.0",
    "vosk>=0.3.45; sys_platform == 'linux'",
]
# Optional: pip install speechbrain for SpeechBrain ASR (heavy: torch)
# [project.optional-dependencies]
# speechbrain = ["speechbrain"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
